--- a/.github/workflows/update-helm-charts.yml
+++ b/.github/workflows/update-helm-charts.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Update Index File
         run: |
-          helm repo index --url https://caas-team.github.io/helm-charts/
+          helm repo index --url https://caas-team.github.io/helm-charts/ .
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add -A
