--- a/.github/workflows/update-helm-charts.yml
+++ b/.github/workflows/update-helm-charts.yml
@@ -30,5 +30,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add -A
-          git commit -m "Update Helm chart and index.yaml for ${${{ github.event.client_payload.chart }}@${{ github.event.client_payload.version }}"
+          git commit -m "Update Helm chart and index.yaml for ${{ github.event.client_payload.chart }}@${{ github.event.client_payload.version }}"
           git push
