--- a/.github/workflows/update-helm-charts.yml
+++ b/.github/workflows/update-helm-charts.yml
@@ -18,6 +18,7 @@ jobs:
           onlyRemoveDeployments: true
   update-charts:
     runs-on: ubuntu-latest
+    needs: cleanup
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
